--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Build VST3
 on:
   push:
     branches: [ main, master ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ main, master ]
 
@@ -32,6 +34,20 @@ jobs:
         name: Fuzza-macOS-AU
         path: ~/Library/Audio/Plug-Ins/Components/Fuzza.component
 
+    - name: Zip Artifacts
+      if: startsWith(github.ref, 'refs/tags/')
+      run: |
+        zip -r Fuzza-macOS-VST3.zip ~/Library/Audio/Plug-Ins/VST3/Fuzza.vst3
+        zip -r Fuzza-macOS-AU.zip ~/Library/Audio/Plug-Ins/Components/Fuzza.component
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          Fuzza-macOS-VST3.zip
+          Fuzza-macOS-AU.zip
+
   build_windows:
     name: Build Windows
     runs-on: windows-latest
@@ -56,3 +72,17 @@ jobs:
       with:
         name: Fuzza-Windows-Standalone
         path: build/Fuzza_artefacts/Release/Standalone/Fuzza.exe
+
+    - name: Zip Artifacts
+      if: startsWith(github.ref, 'refs/tags/')
+      run: |
+        Compress-Archive -Path build/Fuzza_artefacts/Release/VST3/Fuzza.vst3 -DestinationPath Fuzza-Windows-VST3.zip
+        Compress-Archive -Path build/Fuzza_artefacts/Release/Standalone/Fuzza.exe -DestinationPath Fuzza-Windows-Standalone.zip
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          Fuzza-Windows-VST3.zip
+          Fuzza-Windows-Standalone.zip
